Use double quotes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,12 +23,12 @@ jobs:
           command: |
             echo "API Call"
             curl --request GET \
-              --url https://circleci.com/api/v2/project/gh/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/job/${CIRCLE_BUILD_NUM} \
-              --header 'authorization: $CIRCLE_OIDC_TOKEN'
+              --url "https://circleci.com/api/v2/project/gh/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/job/${CIRCLE_BUILD_NUM}" \
+              --header "authorization: $CIRCLE_OIDC_TOKEN"
             echo "API 2 Call"
             curl --request GET \
-              --url https://circleci.com/api/v2/project/gh/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/job/${CIRCLE_BUILD_NUM} \
-              --header 'authorization: $CIRCLE_OIDC_TOKEN_V2'
+              --url "https://circleci.com/api/v2/project/gh/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/job/${CIRCLE_BUILD_NUM}" \
+              --header "authorization: $CIRCLE_OIDC_TOKEN_V2"
   check-api-fail:
     docker:
       - image: cimg/base:stable
@@ -39,8 +39,8 @@ jobs:
           command: |
             echo "API Call"
             curl --request GET \
-              --url https://circleci.com/api/v2/project/gh/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/job/${CIRCLE_BUILD_NUM} \
-              --header 'authorization: $XYZ'
+              --url "https://circleci.com/api/v2/project/gh/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/job/${CIRCLE_BUILD_NUM}" \
+              --header "authorization: $XYZ"
 workflows:
   say-hello:
     jobs:
