--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,11 @@ jobs:
             echo "API Call"
             curl --request GET \
               --url "https://circleci.com/api/v2/project/gh/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/job/${CIRCLE_BUILD_NUM}" \
-              --header "authorization: $CIRCLE_OIDC_TOKEN"
+              --header "Circle-Token: $CIRCLE_OIDC_TOKEN"
             echo "API 2 Call"
             curl --request GET \
               --url "https://circleci.com/api/v2/project/gh/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/job/${CIRCLE_BUILD_NUM}" \
-              --header "authorization: $CIRCLE_OIDC_TOKEN_V2"
+              --header "Circle-Token: $CIRCLE_OIDC_TOKEN_V2"
   check-api-fail:
     docker:
       - image: cimg/base:stable
@@ -40,7 +40,7 @@ jobs:
             echo "API Call"
             curl --request GET \
               --url "https://circleci.com/api/v2/project/gh/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/job/${CIRCLE_BUILD_NUM}" \
-              --header "authorization: $XYZ"
+              --header "Circle-Token: $XYZ"
 workflows:
   say-hello:
     jobs:
